--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
             <!--==================== SUBSCRIBE ====================-->
             <section class="subscribe section">
                 <div class="subscribe__container container">
-                    <h1 class="subscribe__title">Get Started with Holux</h1>
+                    <h1 class="subscribe__title">Get Started with Pelicano</h1>
                     <p class="subscribe__description">
                         Subscribe and find super attractive price quotes from us, Find your
                         residence soon
@@ -399,7 +399,9 @@
         <footer class="footer section">
             <div class="footer__container container grid">
                 <div>
-                    <a href="#" class="footer__logo"> Holux <i class="bx bxs-home-alt-2"></i> </a>
+                    <a href="#" class="footer__logo">Pelicano
+                        <!-- <i class="bx bxs-home-alt-2"></i>  -->
+                    </a>
                     <p class="footer__description">
                         Our vision is to make all people <br />
                         the best place to live for them.
@@ -482,7 +484,7 @@
             </div>
 
             <div class="footer__info container">
-                <span class="footer__copy"> &#169; Bedimcode. All rigths reserved </span>
+                <span class="footer__copy"> &#169; Rohaan. All rigths reserved </span>
 
                 <div class="footer__privacy">
                     <a href="#">Terms & Agreements</a>
