--- a/index.html
+++ b/index.html
@@ -83,8 +83,7 @@
                             /> -->
                             <button class="button">Services</button>
                         </form>
-                    <br/><br/><br/>
-
+                        <br/><br/><br/>
                         <div class="home__value">
                             <div>
                                 <h1 class="home__value-number">9K <span>+</span></h1>
@@ -132,10 +131,12 @@
             </article>
             
 
+            <iframe class="elementor-video" frameborder="0" allowfullscreen="" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" title="Pelicano is an E-commerce End-To-End fulfillment company that helps small businesses grow." width="640" height="360" src="https://www.youtube.com/embed/CZ4xOhDBCK4?controls=1&amp;rel=0&amp;playsinline=0&amp;modestbranding=0&amp;autoplay=1&amp;start=0&amp;enablejsapi=1&amp;origin=https%3A%2F%2Fpelicano.biz&amp;widgetid=1" id="widget2"></iframe>
+
             <!--==================== POPULAR ====================-->
             <section class="popular section" id="popular">
                 <div class="container">
-                    <span class="section__subtitle"> Best Choise </span>
+                    <span class="section__subtitle"> Best Choice </span>
                     <h2 class="section__title">Popular Residences<span>.</span></h2>
 
                     <div class="popular__container swiper">
