--- a/index.html
+++ b/index.html
@@ -130,9 +130,10 @@
                 <img src="assets/img/6SOCB.webp" alt="" class="popular">
             </article>
             
-
+            <div class="Calign">
             <iframe class="elementor-video" frameborder="0" allowfullscreen="" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" title="Pelicano is an E-commerce End-To-End fulfillment company that helps small businesses grow." width="640" height="360" src="https://www.youtube.com/embed/CZ4xOhDBCK4?controls=1&amp;rel=0&amp;playsinline=0&amp;modestbranding=0&amp;autoplay=1&amp;start=0&amp;enablejsapi=1&amp;origin=https%3A%2F%2Fpelicano.biz&amp;widgetid=1" id="widget2"></iframe>
 
+        </div>
             <!--==================== POPULAR ====================-->
             <section class="popular section" id="popular">
                 <div class="container">
